--- a/fern/docs/pages/features/managing-media-anchors.mdx
+++ b/fern/docs/pages/features/managing-media-anchors.mdx
@@ -1,5 +1,5 @@
 ---
-title: Controlling the media path during a call
+title: Managing media anchors
 hidden: false
 ---
 
@@ -12,7 +12,13 @@ When using the [dial verb](/verbs/verbs/dial) to create a bridged call there a f
 
 - **no media** - we call if "no media" if the audio is completely released from jambonz.  In this case, the audio path from the caller's SBC is directly to the far end SBC or SIP trunk.  
 
-**Note**: creating a "no media" media route is entirely dependent on the originating and terminating SBCs/gateways abilities to accept a re-INVITE with a change of media source.  Due to how different enterprises and providers apply different policies for whitelisting media IP addresses, you should not expect this to work in all cases and this feature should be tested in advance for specific use cases with specific providers.
+<Warning>
+Creating a "no media" media route is entirely dependent on the originating and terminating SBCs/gateways 
+abilities to accept a re-INVITE with a change of media source. 
+Due to how different enterprises and providers apply different policies for whitelisting media IP addresses, 
+you should not expect this to work in all cases and this feature should be tested in advance for specific use cases 
+with specific providers.
+</Warning>
 
 ## Dial verb
 
@@ -28,15 +34,21 @@ Even if the media _could_ be released to the SBC, you may prefer for some reason
 
 ### I want to release the media completely.
 
-If you want to release the media completely from the jambonz system, set the `dial.exitMediaPath` property to true.  This will attempt to create a "no media" bridge call - but please keep in mind the warning above that this is dependent on the 3rd party providers/SBC you are connecting to.  
+If you want to release the media completely from the jambonz system, set the `dial.exitMediaPath` property to true. 
+This will attempt to create a "no media" bridge call - but please keep in mind the warning above that this is 
+dependent on the 3rd party providers/SBC you are connecting to.  
 
-Note also that the 'no media' path is only possible if the `JAMBONES_ENABLE_FULL_MEDIA_RELEASE` environment variable has been set for both the sbc-inbound and sbc-outbound applications.
+Note also that the 'no media' path is only possible if the `JAMBONES_ENABLE_FULL_MEDIA_RELEASE` environment variable 
+has been set for both the sbc-inbound and sbc-outbound applications.
 
 ## Dynamically changing the media path during a call
 
-The instructions above allow you to set a preferred media path at the start of the `dial` verb.  You can also dynamically change the media path during a call by sending a live call control REST api call or the similar using a websocket application connection.
+The instructions above allow you to set a preferred media path at the start of the `dial` verb. 
+You can also dynamically change the media path during a call by sending a live call control REST api call 
+or the similar using a websocket application connection.
 
-For instance, using the [@jambonz/node-client-ws](https://www.npmjs.com/package/@jambonz/node-client-ws) library you could switch an existing dialed call in progress to a "no media" call so that an agent could take a PCI compliant credit card transaction by doing the following:
+For instance, using the [websocket SDK](/sdks/nodeclientws) you could switch an existing dialed call in progress 
+to a "no media" call so that an agent could take a PCI compliant credit card transaction by doing the following:
 
 ```js
 session.injectCommand('media:path', 'no-media');
